<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:fillViewport="false">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.john.collections.MainActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:id="@+id/textView"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />
        <Button
            android:text="@string/btn1_w"
            android:id="@+id/button1"
            style="@style/AppTheme.app_btn" />
        <Button
            android:text="@string/btn2_w"
            android:id="@+id/button2"
            android:layout_below="@id/button1"
            style="@style/AppTheme.app_btn" />
        <Button
            android:text="@string/btn3_w"
            android:id="@+id/button3"
            android:layout_below="@id/button2"
            style="@style/AppTheme.app_btn" />
        <Button
            android:text="@string/btn4_w"
            android:id="@+id/button4"
            android:layout_below="@id/button3"
            style="@style/AppTheme.app_btn" />
        <Button
            android:text="@string/btn5_w"
            android:id="@+id/button5"
            android:layout_below="@id/button4"
            style="@style/AppTheme.app_btn" />
        <Button
            android:text="@string/btn6_w"
            android:id="@+id/button6"
            android:layout_below="@id/button5"
            style="@style/AppTheme.app_btn" />
    </RelativeLayout>
</ScrollView>
